make minified version of Notice
