# swagger.json
@@ -734,7 +734,7 @@
                     "notices": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/NoticeResponse"
+                        "$ref": "#/components/schemas/NoticeMinifyResponse"
                       }
                     }
                   }
@@ -857,23 +857,23 @@
         }
       }
     },
-    "/notices/favorite": {
+    "/notices/mypets": {
       "get": {
         "tags": ["Notice"],
         "security": [{ "BearerToken": [] }],
-        "description": "Отримати масив улюблених pets-ів (доданих в favorite) (Приватний)",
+        "description": "Отримати масив лише категорії своїх my-pets (Приватний)",
         "responses": {
           "200": {
-            "description": "Успіх, отримано масив улюблених",
+            "description": "Успіх, отримано масив всіх свої публікації категорії my-pets",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "favorites": {
+                    "notices": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/NoticeResponse"
+                        "$ref": "#/components/schemas/NoticeMinifyResponse"
                       }
                     }
                   }
@@ -916,14 +916,73 @@
         }
       }
     },
-    "/notices/mypets": {
+    "/notices/favoriteads": {
       "get": {
         "tags": ["Notice"],
         "security": [{ "BearerToken": [] }],
-        "description": "Отримати масив лише категорії своїх my-pets (Приватний)",
+        "description": "Отримати масив улюблених pets-ів (доданих в favorite) (Приватний)",
         "responses": {
           "200": {
-            "description": "Успіх, отримано масив всіх свої публікації категорії my-pets",
+            "description": "Успіх, отримано масив улюблених",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "favorites": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/NoticeMinifyResponse"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Неавторизований користувач (JWT token відсутній)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Not authorized"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Помилка сервера",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Server error"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/notices/myads": {
+      "get": {
+        "tags": ["Notice"],
+        "security": [{ "BearerToken": [] }],
+        "description": "Отримати масив улюблених усіх своїх публікацій (Приватний)",
+        "responses": {
+          "200": {
+            "description": "Успіх, отримано масив усіх своїх публікацій",
             "content": {
               "application/json": {
                 "schema": {
@@ -932,7 +991,7 @@
                     "notices": {
                       "type": "array",
                       "items": {
-                        "$ref": "#/components/schemas/NoticeResponse"
+                        "$ref": "#/components/schemas/NoticeMinifyResponse"
                       }
                     }
                   }
@@ -1079,7 +1138,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Delete success"
+                      "example": "Delete successfully"
                     }
                   }
                 }
@@ -1176,11 +1235,13 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "favorites": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/NoticeResponse"
-                      }
+                    "message": {
+                      "type": "string",
+                      "enum": [
+                        "Deleted from favorites successfully",
+                        "Added to favorites successfully"
+                      ],
+                      "example": "Added to favorites successfully"
                     }
                   }
                 }
@@ -1601,6 +1662,48 @@
             "maxLength": 120,
             "example": "Rich would be the perfect addition to an active family that loves to play and go on walks. I bet he would love having a doggy playmate too! ",
             "default": ""
+          }
+        }
+      },
+      "NoticeMinifyResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64",
+            "example": "64baea04ba92a3f0060ba5b7"
+          },
+          "category": {
+            "type": "string",
+            "enum": ["sell", "lost-found", "for-free", "my-pet"],
+            "example": "sell"
+          },
+          "title": {
+            "type": "string",
+            "minLength": 4,
+            "maxLength": 32,
+            "description": "Min 4 макс 32 літери, обов'язкове для  sell, lost-found, for-free"
+          },
+          "age": {
+            "type": "string",
+            "example": "1 year",
+            "description": "Готовий вирахуваний вік pets-а"
+          },
+          "file": {
+            "type": "string",
+            "example": "https://res.cloudinary.com/dsn4linai/image/upload/v1690095165/fqwwamguzqrsuis7bm1m.png"
+          },
+          "sex": {
+            "type": "string",
+            "enum": ["female", "male"],
+            "example": "female"
+          },
+          "location": {
+            "type": "string",
+            "minLength": 2,
+            "pattern": "^[a-zA-Z]+$",
+            "example": "Kyiv",
+            "description": "Лише літери, без цифер та без пробілу мін 2"
           }
         }
       },
